--- a/SLIB/SLIB-ear/pom.xml
+++ b/SLIB/SLIB-ear/pom.xml
@@ -4,12 +4,12 @@
     <parent>
     <artifactId>SLIB</artifactId>
     <groupId>ec.com</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
     <groupId>ec.com</groupId>
     <artifactId>SLIB-ear</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>ear</packaging>
 
     <name>SLIB-ear</name>
@@ -44,13 +44,13 @@
         <dependency>
             <groupId>ec.com</groupId>
             <artifactId>SLIB-ejb</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>ec.com</groupId>
             <artifactId>SLIB-web</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <type>war</type>
         </dependency>
     </dependencies>
