--- a/SLIB/pom.xml
+++ b/SLIB/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ec.com</groupId>
   <artifactId>SLIB</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>pom</packaging>
   <name>SLIB</name>
   <modules>
