--- a/SLIB/SLIB-ear/pom.xml
+++ b/SLIB/SLIB-ear/pom.xml
@@ -25,8 +25,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${version.ear.plugin}</source>
+                    <target>${version.ear.plugin}</target>
                 </configuration>
             </plugin>
             <plugin>
