--- a/SLIB/SLIB-internet-web/pom.xml
+++ b/SLIB/SLIB-internet-web/pom.xml
@@ -121,5 +121,26 @@
 			<version>1.2.17</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- dependencias para boostrap -->
+		<!-- <dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.2.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.webjars</groupId>
+					<artifactId>jquery</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency> -->
+
+		
     </dependencies>
 </project>
